updated icon; updated color; added filename feature

--- a/popup.html
+++ b/popup.html
@@ -1,33 +1,71 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>SVG Extractor</title>
-  <link rel="stylesheet" href="popup.css">
-  <style>
-    body { font-family: sans-serif; min-width: 300px; }
-    .svg-thumb { width: 64px; height: 64px; border: 1px solid #ccc; margin: 4px; display: inline-block; cursor: pointer; }
-    #options { display: none; }
-    #svg-preview { max-width: 200px; max-height: 200px; }
-  </style>
-</head>
-<body>
-  <h3>SVGs on this page</h3>
-  <div id="svg-list"></div>
-  <div id="options">
-    <h4>Download as:</h4>
-    <button id="download-svg">SVG</button>
-    <button id="download-png">PNG</button>
-    <button id="download-jpg">JPG</button>
-    <div id="svg-preview"></div>
-    <button id="back">Back</button>
-  </div>
-  <div id="paste-section" style="margin-top:16px;">
-    <button id="show-paste-box">Try pasting HTML here</button>
-    <div id="paste-box" style="display:none; margin-top:8px;">
-      <textarea id="paste-input" rows="5" style="width:100%;" placeholder="Paste SVG or HTML code here"></textarea>
-      <button id="preview-paste">Preview SVG</button>
+  <head>
+    <title>SVG Extractor</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alata&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="popup.css" />
+    <style>
+      body {
+        font-family: sans-serif;
+        min-width: 300px;
+      }
+      .svg-thumb {
+        width: 64px;
+        height: 64px;
+        border: 1px solid #ccc;
+        margin: 4px;
+        display: inline-block;
+        cursor: pointer;
+      }
+      #options {
+        display: none;
+      }
+      #svg-preview {
+        max-width: 200px;
+        max-height: 200px;
+      }
+    </style>
+  </head>
+  <body>
+    <h3>SVGs on this page</h3>
+    <div id="svg-list"></div>
+    <div id="options">
+      <input
+        id="filename-input"
+        type="text"
+        placeholder="Enter filename (optional)"
+        style="
+          margin-top: 8px;
+          padding: 6px;
+          width: 80%;
+          border-radius: 6px;
+          border: 1px solid #ccc;
+        "
+      />
+      <h4>Download as:</h4>
+      <button id="download-svg">SVG</button>
+      <button id="download-png">PNG</button>
+      <button id="download-jpg">JPG</button>
+      <div id="svg-preview"></div>
+      <button id="back">Back</button>
     </div>
-  </div>
-  <script src="popup.js"></script>
-</body>
+    <div id="paste-section" style="margin-top: 16px">
+      <button id="show-paste-box">Try pasting HTML here</button>
+      <div id="paste-box" style="display: none; margin-top: 8px">
+        <textarea
+          id="paste-input"
+          rows="5"
+          style="width: 100%"
+          placeholder="Paste SVG or HTML code here"
+        ></textarea>
+        <button id="preview-paste">Preview SVG</button>
+      </div>
+    </div>
+    <script src="popup.js"></script>
+  </body>
 </html>
